app/css/user-card.scss
.user-card {
  display: flex;
  flex-flow: row nowrap;

  padding: 16px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.07);
  border-radius: 4px;
  background-color: #f4f5f7;
  transition: background 0.15s ease-out;

  &:hover {
    background-color: #dfe1e6;
  }

  > .body {
    flex: 0 0 96px;
    display: flex;
    justify-content: center;
  }

  > .info {
    flex: 2 0 66%;
    display: flex;
    justify-content: center;
    align-content: center;
    flex-flow: column nowrap;
  }

  > .body + .info {
    margin-left: 16px;
  }

  > .info > .name {
    font-size: 18px;
    font-weight: 600;
  }

  > .info > .company {
    color: #253858;
  }
}

